<resources>
<string name="app_name">bloqs</string>
<string name="reset_database">Reset Database</string>
<string name="fetching_data">Fetching Data</string>
<string name="username">Username</string>
<string name="password">Password</string>
<string name="log_in">Log In</string>
<string name="clients">Clients</string>
<string name="real_estates">Real Estates</string>
<string name="id">ID: #</string>
<string name="null_value"> (null) </string>
<string name="delete">Delete</string>
<string name="application_main_panel">Application Main Panel</string>
<string name="application_management">Application Management</string>
<string name="insert">Insert</string>
<string name="delete_all">Delete All</string>
<string name="typology">Typology:</string>
<string name="location">Location</string>
<string name="characteristics">Characteristics:</string>
<string name="edit">Edit</string>
<string name="create">Create</string>
<string name="name">Name</string>
<string name="age">Age</string>
<string name="description">Description</string>
<string name="photo">Photo</string>
<string name="t">t</string>
</resources>
