<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:labelFor="@+id/description"
	android:text="@string/description" />

<EditText
	android:id="@+id/description"
	android:layout_width="256dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:autofillHints=""
	android:inputType="textShortMessage" />

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:labelFor="@+id/typology"
	android:text="@string/typology" />

<RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="48dp"
	android:layout_gravity="center">

<TextView
	android:id="@+id/t"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_centerVertical="true"
	android:text="@string/t" />

<EditText
	android:id="@+id/typology"
	android:layout_width="256dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:layout_toEndOf="@+id/t"
	android:autofillHints=""
	android:inputType="number" />
</RelativeLayout>

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:labelFor="@+id/location"
	android:text="@string/location" />

<EditText
	android:id="@+id/location"
	android:layout_width="256dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:autofillHints="postalAddress"
	android:inputType="textPostalAddress" />

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:labelFor="@+id/photo"
	android:text="@string/photo" />

<EditText
	android:id="@+id/photo"
	android:layout_width="256dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:autofillHints=""
	android:inputType="textUri" />

<com.android.volley.toolbox.NetworkImageView
	android:id="@+id/photo_image"
	android:layout_width="144dp"
	android:layout_height="144dp"
	android:layout_gravity="center" />
</LinearLayout>