<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".ApplicationMainPanelActivity">

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginVertical="24dp"
	android:gravity="center"
	android:text="@string/application_main_panel"
	android:textSize="36sp" />

<Button
	android:id="@+id/real_estates"
	android:layout_width="256dp"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:text="@string/real_estates" />


<Button
	android:id="@+id/manage"
	android:layout_width="256dp"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:text="@string/application_management" />

</LinearLayout>
