<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:orientation="vertical"
	android:paddingHorizontal="64dp"
	tools:context=".models.client.ClientCreationActivity">

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:labelFor="@+id/name"
	android:text="@string/name" />

<EditText
	android:id="@+id/name"
	android:layout_width="256dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:autofillHints="name"
	android:inputType="textPersonName" />

<TextView
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:labelFor="@+id/age"
	android:text="@string/age" />

<EditText
	android:id="@+id/age"
	android:layout_width="256dp"
	android:layout_height="48dp"
	android:layout_gravity="center"
	android:inputType="number"
	android:autofillHints="" />

<Button
	android:id="@+id/create"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="center"
	android:text="@string/create" />

</LinearLayout>