<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal">

<RelativeLayout
	android:layout_gravity="center"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

<TextView
	android:id="@+id/id"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/id" />

<TextView
	android:id="@+id/user_id"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_toEndOf="@+id/id"
	android:text="@string/null_value" />

<TextView
	android:id="@+id/user_user"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginStart="24dp"
	android:layout_toEndOf="@+id/user_id"
	android:text="@null" />

</RelativeLayout>

<Button
	android:id="@+id/delete"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_gravity="end"
	android:layout_marginHorizontal="24dp"
	android:text="@string/delete" />
</LinearLayout>
</androidx.cardview.widget.CardView>