<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="4dp">

<RelativeLayout
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

<com.android.volley.toolbox.NetworkImageView
	android:id="@+id/real_estate_image"
	android:layout_width="144dp"
	android:layout_height="144dp" />

<TextView
	android:id="@+id/real_estate_description"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_below="@+id/real_estate_image"
	android:layout_marginVertical="4dp"
	android:text="@null" />

<TextView
	android:id="@+id/real_estate_typology_label"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_below="@+id/real_estate_description"
	android:layout_marginVertical="4dp"
	android:text="@string/typology" />

<TextView
	android:id="@+id/real_estate_typology"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_below="@id/real_estate_description"
	android:layout_toEndOf="@+id/real_estate_typology_label"
	android:layout_marginVertical="4dp"
	android:text="@null" />

<TextView
	android:id="@+id/real_estate_location_label"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_below="@+id/real_estate_typology"
	android:layout_marginVertical="4dp"
	android:text="@string/location" />

<TextView
	android:id="@+id/real_estate_location"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_below="@id/real_estate_typology"
	android:layout_marginVertical="4dp"
	android:layout_toEndOf="@+id/real_estate_location_label"
	android:text="@null" />

<TextView
	android:id="@+id/real_estate_characteristics_label"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_below="@+id/real_estate_location"
	android:layout_marginTop="4dp"
	android:text="@string/characteristics" />

<ListView
	android:id="@+id/real_estate_characteristics"
	android:layout_width="wrap_content"
	android:layout_height="56dp"
	android:layout_below="@id/real_estate_characteristics_label"
	android:layout_marginStart="24dp" />
</RelativeLayout>
</androidx.cardview.widget.CardView>